# qc-classifier

./: .gitignore  README.md  pyproject.toml
qc_classifier/: qc_ml.ipynb
qc_classifier/helpers/: data_miner.py  map_builder.py
